add products to check

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -98,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "fe68ef93-8bd4-4c6e-9876-5c0a7985c0f7"
   }
 }
